[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/scripts/npc/GrineerStateMachine.gd" type="Script" id=1]
[ext_resource path="res://assets/scripts/npc/GrineerBombard.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/npc/grineer/grineer_bombard_atlas.png" type="Texture" id=3]
[ext_resource path="res://assets/scenes/misc/HealthDisplay.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "shoot",
"speed": 4.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": false,
"name": "die",
"speed": 0.0
} ]

[sub_resource type="CapsuleShape2D" id=9]
radius = 9.0
height = 14.0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 80, 16 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 16 )

[node name="GrineerBombard" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0 )
shape = SubResource( 9 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -5, 0 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2( -24, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( -43, -8 )
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 3, 0 )
shape = SubResource( 11 )

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="HealthDisplay" parent="." instance=ExtResource( 4 )]
position = Vector2( -6, -32 )
scale = Vector2( 0.1, 0.1 )

[node name="Bombard" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Bombard"]
position = Vector2( -16, 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.8, 2.38419e-07 )
scale = Vector2( 1.18, 1.6 )
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
